infra/k8s/ingress-srvc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srvc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: flaskusers.com
      http:
        paths:
          - path: /
            backend:
              serviceName: flask-apis-service
              servicePort: 5000
